# rclone-sync-runner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: run-test.yml
configs/: example.yml
documents/: 20260226_TDD_MVP.md
rclone_sync_runner/: __init__.py  cli.py  config.py  discovery.py  formatting.py  logging_setup.py  models.py  rclone_subprocess.py  runner.py  sync.py
rclone_sync_runner/notifiers/: __init__.py  base.py  logging_notifier.py  telegram_notifier.py
scripts/: telegram_get_chat_id.py
tests/: test_cli.py  test_config.py  test_discovery.py  test_formatting.py  test_rclone_subprocess.py  test_runner.py  test_sync.py  test_telegram_notifier.py
