[project]
name = "rclone-batch-job-runner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.2",
]
